# BICI_SENSORS_ROS

./: .gitignore  README.md  Sensors_Network_Manual.docx  Untitled Document
Allegro_Hardware_Maintenance/FingerBase_Joint_Extenders/: FingerBase_Joint_Extender_Right.3mf  FingerBase_Joint_Extender_Right.stl
Gazebo_Simulation/: Notes & Optimization Steps
Gazebo_Simulation/Contact_Sensor/: CMakeLists.txt  CoordinatesPlugin.cc  CoordinatesPlugin.hh  Notes & Optimization Steps
Gazebo_Simulation/Gazebo_Contact_Investigation/: Gazebo_Contact_Detection_Observations_And_Conclusions
Gazebo_Simulation/Pt_Cloud_Scripts/: contact_cloud_vis.py  filtered_contact_cloud_vis.py  point_cloud_filter.py  point_cloud_vis.py  points_coordinates.csv
Gazebo_Simulation/Simulation_Joint_States/: CMakeLists.txt  JointStatesPublisher.cc  JointStatesPublisher.hh
Gazebo_Simulation/Testing_Objects/: ABS_3DPrinting_Material_Datasheet  cube.dae  cylinder.dae
Gazebo_Simulation/World/: contact.world
Gazebo_Simulation/launch/: simulated_allegro_hand.launch
Gazebo_Simulation/models/cubic_object/: model.config  (+1 more)
ROS_WS/: Pcan_Bus_Setup  Pcan_Downloads  VScode_ROS_Setup  serial_USB_Setup
ROS_WS/PCAN-Basic_Linux-4.6.1/: changelog.md  license.txt  readme.txt
ROS_WS/Pt_Cloud_Scripts/: inactive_points_coordinates.csv  point_cloud_vis.py
ROS_WS/robot_arm_ws/src/coro_workstations/allegro_hand/allegro_hand_simulation/allegro_hand_gazebo/: CMakeLists.txt  package.xml
ROS_WS/robot_arm_ws/src/coro_workstations/allegro_hand/allegro_hand_simulation/allegro_hand_gazebo/allegro_hand_description/urdf/: allegro_hand_description_right.urdf.xacro
ROS_WS/robot_arm_ws/src/coro_workstations/allegro_hand/allegro_hand_simulation/allegro_hand_gazebo/controller/: allegro_hand_right_position_torque_control.yaml
Simulation_Hardware_Calibration_Data/: UR5e_hardware_tool_Coordinates_Preparation
(+310 files in other folders)
